--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,15 +22,14 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
       
-    - name: Reports Generate
-      run: mvn allure:serve
-      
-    - uses: actions/upload-artifact@master
-      with:
-        name: allure-results
-        path: allure-results
-        retention-days: 20
-  
+    - name: Install dependencies
+      run: mvn dependency:go-offline compile compiler:testCompile
+
+    - name: Run Test
+      if: always()
+      run: mvn test
+      continue-on-error: true
+
     - name: Get Allure history
       uses: actions/checkout@v2
       if: always()
@@ -44,11 +43,10 @@ jobs:
       if: always()
         #id: allure-report
       with:
-          allure_results: allure-results
-          gh_pages: gh-pages
-          allure_report: allure-report
+          allure_results: target/allure-results
+          #gh_pages: gh-pages
+          #allure_report: allure-report
           allure_history: allure-history
-          keep_reports: 20
 
     - name: Deploy report to Github Pages
       if: always()
